SCRUM-26 some issues resolved